--- a/views/base.pug
+++ b/views/base.pug
@@ -9,6 +9,7 @@ head
     link(rel='icon' type='image/png' href='/favicon/favicon.png')
     link(rel='preconnect' href='https://fonts.googleapis.com/')
     link(rel='preconnect' href='https://fonts.gstatic.com/' crossorigin='')
+    link(rel="shortcut icon" type="image/x-icon" href="https://preview.iwedding.info/templates/template6/favicon.ico")
     link(href='https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap' rel='stylesheet')
     link(rel='stylesheet' href='/css/libs.bundle2b87.css')
     link(rel='stylesheet' href='/css/theme.bundle2b87.css?v=20210926')
@@ -53,6 +54,9 @@ body.flex-colum.h-100(style='padding-top:65px!important')
     script(src='/js/vendor.bundlef9f5.js')
     script(src='/libs/jquery.min3c8e.js')
     script(src='/assets/705bcf32/yii.js')
+    script(src='/assets/705bcf32/yii.activeForm.js')
+    script(src='/assets/705bcf32/yii.validation.js')
+    script(src='/assets/705bcf32/yii.captcha.js')
     script(src="https://www.googletagmanager.com/gtag/js?id=G-P4QBSSV7TG")
     script(src='/js/scripts.js')
 
