--- a/views/form.pug
+++ b/views/form.pug
@@ -13,5 +13,5 @@ body
     block forms
         //- Registration Form
 
-    script(src='/js/bundle.js')
+    //- script(src='/js/bundle.js')
     //- script(src='/assets/js/form.js')
