--- a/template/wedding/templates.html
+++ b/template/wedding/templates.html
@@ -273,7 +273,8 @@ gtag('config', 'G-P4QBSSV7TG');
 		</div>
 
 			</div>
-</section>	<footer class="py-5 bg-gray-200 mt-auto">
+</section>	
+<footer class="py-5 bg-gray-200 mt-auto">
 		<div class="container">
 			<div class="row">
 				<div class="col-12 text-center text-gray-700">
@@ -295,7 +296,7 @@ gtag('config', 'G-P4QBSSV7TG');
 				</div>
 			</div>
 		</div>
-	</footer>
+</footer>
 	<!-- Modal show messae-->
 	<div class="modal fade show" id="messageModal" tabindex="-1" aria-labelledby="messaegModalLabel" aria-modal="true" role="dialog">
 		<div class="modal-dialog modal-dialog-centered" style="max-width: 550px;">
