--- a/views/base.pug
+++ b/views/base.pug
@@ -1,6 +1,5 @@
 head
     block head
-        //- script(src='https://unpkg.com/axios/dist/axios.min.js')
     meta(charset='UTF-8')
     meta(http-equiv='X-UA-Compatible' content='IE=edge')
     meta(name='viewport' content='width=device-width, initial-scale=1')
@@ -32,7 +31,8 @@ head
     meta(name='csrf-param' content='_csrf-Behappy')
     meta(name='csrf-token' content='3W6rXH3oIR-ZhLWYhiJd5hg5QH8Tuiuc1uegHepZnsu4L-oLSKtvZazm8dS3Thy8fn50Nnn2ffau39BN3j73jA==')
     link(href='wedding.html' rel='canonical')
-
+    script(async='' src='https://www.googletagmanager.com/gtag/js?id=G-P4QBSSV7TG')
+    script(src='https://unpkg.com/axios/dist/axios.min.js')
 
 
 body.flex-colum.h-100(style='padding-top:65px!important')
@@ -45,19 +45,22 @@ body.flex-colum.h-100(style='padding-top:65px!important')
     //-footer
     include _footer
     //- script(src='/js/mapbox.js')
-    //- script(src='/js/login.js')
     script(src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js" type="text/javascript")
+    script(src='/libs/jquery.min3c8e.js')
+    //- script(src='https://js.stripe.com/v3/')
+    //- script(src='https://unpkg.com/axios/dist/axios.min.js')
+    script(src='https://biihappy.com/static/libs/jquery.min.js?v=20210925')
     script(src='/js/preview.js')
     script(src='/js/theme.bundlef9f5.js')
     script(src='/js/themee030.js')
     script(src='/js/themef9f5.js') 
     script(src='/js/vendor.bundlef9f5.js')
-    script(src='/libs/jquery.min3c8e.js')
     script(src='/assets/705bcf32/yii.js')
     script(src='/assets/705bcf32/yii.activeForm.js')
     script(src='/assets/705bcf32/yii.validation.js')
     script(src='/assets/705bcf32/yii.captcha.js')
-    script(src="https://www.googletagmanager.com/gtag/js?id=G-P4QBSSV7TG")
     script(src='/js/scripts.js')
+    script(type='module' src='/js/login.js')
+    script(src='/js/bundle.js')
 
 
