--- a/public/assets/css/theme.css
+++ b/public/assets/css/theme.css
@@ -8895,6 +8895,10 @@ fieldset:disabled .btn {
     margin-right: 3rem !important;
 }
 
+.me-65{
+    margin-right: 3.5rem!important
+}
+
 .me-7 {
     margin-right: 4rem !important;
 }
