--- a/template/preview.html
+++ b/template/preview.html
@@ -17,7 +17,7 @@
 		<link rel="stylesheet" id="nd_options_font_family_p-css" href="http://fonts.googleapis.com/css?family=Halant%3A300%2C400%2C700&amp;ver=5.2.2" type="text/css" media="all">
 		<link rel="stylesheet" id="nd_options_font_family_third-css" href="http://fonts.googleapis.com/css?family=Great+Vibes&amp;ver=5.2.2" type="text/css" media="all">
 		<link rel="stylesheet" id="nd_tds_style-css" href="http://www.nicdarkthemes.com/themes/wedding/wp/demo/wedding-planner/wp-content/plugins/nd-theme-demos-switcher/css/style.css?ver=5.2.2" type="text/css" media="all">
-		<link rel="stylesheet" href="/static/css/style.css">
+		<link rel="stylesheet" href="/template/static/css/style.css">
 </head>
 <body >
 <div id="nd_options_navigation_2_container" class="nd_options_section nd_options_position_relative ">
@@ -642,11 +642,11 @@
 			</div>
 		</section>
 	</div>
-	<script src="/static/js/scripts.js"></script>
-<script src="/static/js/preview.js"></script>
-<script src="../static/libs/jquery.min3c8e.js?v=20210925"></script>
-	<script src="../static/js/vendor.bundlef9f5.js?v=202111121"></script>
-	<script src="../static/js/theme.bundlef9f5.js?v=202111121"></script>
-	<script src="../static/js/themee030.js?v=20211225"></script>
+	<script src="/template/static/js/scripts.js"></script>
+	<script src="/template/static/js/preview.js"></script>
+	<script src="/template/static/libs/jquery.min3c8e.js?v=20210925"></script>
+	<script src="/template/static/js/vendor.bundlef9f5.js?v=202111121"></script>
+	<script src="/template/static/js/theme.bundlef9f5.js?v=202111121"></script>
+	<script src="/template/static/js/themee030.js?v=20211225"></script>
 </body>
 </html>
