--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -16,10 +16,10 @@ block content
                 | H&atilde;y t&#x1EB7;ng cho ng&agrave;y c&#x1B0;&#x1EDB;i c&#x1EE7;a b&#x1EA1;n m&#x1ED9;t wedding website tuy&#x1EC7;t v&#x1EDD;i v&agrave;
                 | ho&agrave;n to&agrave;n mi&#x1EC5;n ph&iacute;.
               .text-center.text-md-start
-                a.btn.btn-danger.shadow.lift.me-1.mb-3(href='wedding/templates.html')
+                a.btn.btn-danger.shadow.lift.me-1.mb-3(href='/wedding/templates')
                   | B&#x1EAF;t &dstrok;&#x1EA7;u mi&#x1EC5;n ph&iacute;
                   i.fe.fe-arrow-right.d-none.d-md-inline.ms-3
-                a.btn.btn-danger-soft.lift.mb-3(href='wedding/templates.html')
+                a.btn.btn-danger-soft.lift.mb-3(href='/wedding/templates')
                   | Th&#x1B0; vi&#x1EC7;n giao di&#x1EC7;n
                   i.fe.fe-arrow-right.d-none.d-md-inline.ms-3
               .text-center.text-md-start
