--- a/views/user-password.pug
+++ b/views/user-password.pug
@@ -24,10 +24,10 @@ block content
                                     | T&agrave;i kho&#x1EA3;n
                                 ul.card-list.list.text-gray-700.mb-0
                                     li.list-item
-                                        a.list-link.text-reset(href='/vi/account/account-settings')
+                                        a.list-link.text-reset(href='/user/me')
                                             | Thi&#x1EBF;t l&#x1EAD;p h&#x1ED3; s&#x1A1;
                                     li.list-item.active
-                                        a.list-link.text-reset(href='/vi/account/account-settings/security')
+                                        a.list-link.text-reset(href='/user/account-security')
                                             | Thi&#x1EBF;t l&#x1EAD;p b&#x1EA3;o m&#x1EAD;t
                 .col-12.col-md-9
                     .card.card-bleed.shadow-light-lg.mb-6
@@ -40,24 +40,24 @@ block content
                                     a.small.text-gray-700(target='_blank' href='/vi/user/forgot-password')
                                         | B&#x1EA1;n qu&ecirc;n m&#x1EAD;t kh&#x1EA9;u?
                     .card-body
-                        form.form-user-password.mb-6(action='/vi/account/account-settings/security' method='post')
+                        form.mb-6.form-user-password
                             input(type='hidden' name='_csrf-biihappy' value='p7EwCOVrEuTvyJG4PymoT2cR150gU2Lsb_QSP35e956S7n5_nDF_oriO3OdVZst9C1qYznARON0DnSBmHBnFxA==')
                             .col-12
                                 .form-group.field-password-current.required
                                     .form-floating.mb-2.form-group
-                                        input#password-current.form-control(type='password', placeholder='Mật khẩu hiện tại', aria-required='true',minlength='8')
-                                        label.control-label(for='password-current') M&#x1EAD;t kh&#x1EA9;u hi&#x1EC7;n t&#x1EA1;i
+                                        input#password-current.form-control(type='password', placeholder='Mật khẩu hiện tại' aria-required='true' minlength='8' name="password-current" autocomplete="on")
+                                        label.control-label.form__labe(for='password-current') M&#x1EAD;t kh&#x1EA9;u hi&#x1EC7;n t&#x1EA1;i
                                         p.help-block.help-block-error
                             .col-12
                                 .form-group.field-password.required
                                     .form-floating.mb-2.form-group
-                                        input#password.form-control(type='password',placeholder='Mật khẩu mới' aria-required='true', minlength='8')
+                                        input#password.form-control(type='password',placeholder='Mật khẩu mới' aria-required='true', minlength='8'  autocomplete="on")
                                         label.control-label(for='password') M&#x1EAD;t kh&#x1EA9;u m&#x1EDB;i
                                         p.help-block.help-block-error
                             .col-12
                                 .form-group.field-password-confirm.required
                                     .form-floating.mb-2.form-group
-                                        input#password-confirm.form-control(type='password', placeholder='Xác nhận mật khẩu mới',minlength='8')
+                                        input#password-confirm.form-control(type='password', placeholder='Xác nhận mật khẩu mới',minlength='8'  autocomplete="on")
                                         label.control-label(for='password-confirm') X&aacute;c nh&#x1EAD;n m&#x1EAD;t kh&#x1EA9;u m&#x1EDB;i
                                         p.help-block.help-block-error
                             .row
