--- a/views/account.pug
+++ b/views/account.pug
@@ -39,10 +39,10 @@ block content
                   | T&agrave;i kho&#x1EA3;n
                 ul.card-list.list.text-gray-700.mb-0
                   li.list-item.active
-                    a.list-link.text-reset(href='/vi/account/account-settings')
+                    a.list-link.text-reset(href='/user/me')
                       | Thi&#x1EBF;t l&#x1EAD;p h&#x1ED3; s&#x1A1;
                   li.list-item
-                    a.list-link.text-reset(href='/vi/account/account-settings/security')
+                    a.list-link.text-reset(href='/user/account-security')
                       | Thi&#x1EBF;t l&#x1EAD;p b&#x1EA3;o m&#x1EAD;t
         .col-12.col-md-9
           .card.card-bleed.shadow-light-lg.mb-6
@@ -86,7 +86,7 @@ block content
                   .col-12
                     .form-group.form-user-datal.required
                       .form-floating.mb-2.form-group.ma-bt-md   
-                        input#phone.form__input.form-control(type='number', value=`${user.phone}`, required, name='phone')
+                        input#phone.form__input.form-control(type='text', value=`${user.phone}`, required, name='phone')
                         label.form__label(for='phone') phone
                 .col-12
                     .form-group.form-user-datal.required
@@ -94,7 +94,4 @@ block content
                         input#nation.form__input.form-control(type='text', value=`${user.nation}`, required, name='nation')
                         label.form__label(for='nation') nation
                 .col-12.text-center.mt-5
-                  button.btn.btn.btn-danger.btn--save-settings Save settings
-
-
-             
+                  button.btn.btn.btn-danger.btn--save-settings Save settings     
