--- a/views/base.pug
+++ b/views/base.pug
@@ -14,7 +14,7 @@ head
     link(rel='stylesheet' href='/css/themef9f5.css?v=202111121')
     meta(property='og:site_name' content='#')
     meta(property='og:type' content='website')
-    meta(property='og:url' content='wedding.html')
+    meta(property='og:url' content='wedding.html') 
     meta(name='twitter:card' content='summary')
     meta(name='twitter:domain' content='/wedding.html')
     meta(name='twitter:site' content='#')
@@ -61,6 +61,6 @@ body.flex-colum.h-100(style='padding-top:65px!important')
     script(src='/assets/705bcf32/yii.captcha.js')
     script(src='/js/scripts.js')
     script(src='/js/bundle.js')
-    script(src='/js/index.js')
+    script(type="module" dist='/js/index.js')
 
 
