--- a/views/templates.pug
+++ b/views/templates.pug
@@ -48,7 +48,7 @@ block content
                             hr.card-meta-divider
                             .d-block.w-100.text-center
                                 a.btn.btn-sm.btn-secondary-soft(href='https://preview.iwedding.info/?template=6174ee7a7a1c7661fb0a671c' target='_blank') Xem tr&#x1B0;&#x1EDB;c
-                                a.btn.btn-sm.btn-danger-soft(href='start3bf4.html?template=6174ee7a7a1c7661fb0a671c') T&#x1EA1;o website
+                                a.btn.btn-sm.btn-danger-soft(href='/wedding/templates/test') T&#x1EA1;o website
                 .col-12.col-md-6.col-lg-4.d-flex.mb-7.template-item(data-id='6174ee5134c46827c45a50e5')
                     .card.mb-6.mb-lg-0.shadow-light-lg.lift.lift-lg
                         a.card-img-top(href='startd90f.html?template=6174ee5134c46827c45a50e5')
