--- a/views/bride-groom.pug
+++ b/views/bride-groom.pug
@@ -12,7 +12,7 @@ block content
     li.nav-item
       a.nav-link.bg-gray-200(href=`/wedding/edit/${weddings.id}/storylove`) Chuy&#x1EC7;n T&igrave;nh Y&ecirc;u
   if(weddings)
-    form#groom-bride-form(action=`/wedding/edit/${weddings.id}/bridegroom?_method=PUT` method='post')
+    form#groom-bride-form(action=`/wedding/edit/${weddings.id}/bridegroom?_method=PUT` method='post' enctype='multipart/form-data')
       input(type='hidden' name='_csrf-biihappy' value='')
       .row.mt-5
         .col-12
@@ -35,10 +35,13 @@ block content
               .d-block.text-center
                 a.icon-circle.icon-avatar.thumbnail.d-block.mb-3.image-edit.choose-image-parent.position-relative.m-auto(href='javascript:void(0)')
                   .choose-image-overlay.d-flex.justify-content-center.align-items-center.position-absolute.top-0.start-0.w-100.h-100
-                    button.btn.btn-primary.btn-xs.position-relative(type='button')
-                      | Thay &dstrok;&#x1ED5;i
-                    input#upload_image_groom.file-field-absolute(type='file' name='upload_image_groom')
-                  img#show_image_groom.w-100.img-thumbnail.rounded-0(src='https://cdn.biihappy.com/ziiweb/default/website/3b48bc6125ce6d186297a3e90a11085e.jpeg')
+                    //- button.btn.btn-primary.btn-xs.position-relative(type='button')
+                    //-   | Thay &dstrok;&#x1ED5;i  
+                  img#show_image_groom.w-100.img-thumbnail.rounded-0(src=`/img/wedding/${weddings.malephoto}`)
+                col-12.col-md-auto
+                  //- button.btn.btn-xs.w-100.btn-secondary.mt-5.mt-md-0.position-relative
+                  input.form__upload(type='file' accept='image/*' id ='malephoto' name='malephoto')
+                  label(for='malephoto') 
                 .field-websiteinformationgroominfoform-avatar_base64
                   input#websiteinformationgroominfoform-avatar_base64.form-control(type='hidden' name='WebsiteInformationGroomInfoForm[avatar_base64]')
                   .help-block
@@ -74,10 +77,15 @@ block content
               .d-block.text-center
                 a.icon-circle.icon-avatar.thumbnail.d-block.mb-3.image-edit.choose-image-parent.position-relative.m-auto(href='javascript:void(0)')
                   .choose-image-overlay.d-flex.justify-content-center.align-items-center.position-absolute.top-0.start-0.w-100.h-100
-                    button.btn.btn-primary.btn-xs.position-relative(type='button')
-                      | Thay &dstrok;&#x1ED5;i
-                    input#upload_image_bride.file-field-absolute(type='file' name='upload_image_bride')
-                  img#show_image_bride.w-100.img-thumbnail.rounded-0(src='https://cdn.biihappy.com/ziiweb/default/website/59b631f29bfb9f7cd20437d27ddbe4db.jpeg')
+                    //- button.btn.btn-primary.btn-xs.position-relative(type='button')
+                    //-   | Thay &dstrok;&#x1ED5;i
+                    //- input.form__upload(type='file' accept='image/*' id ='malephoto' name='malephoto')
+                    //- label(for='malephoto') 
+                  img#show_image_bride.w-100.img-thumbnail.rounded-0(src=`/img/wedding/${weddings.fephoto}`)
+                .col-12.col-md-auto
+                  //- button.btn.btn-xs.w-100.btn-secondary.mt-5.mt-md-0.position-relative
+                  input.form__upload(type='file' accept='image/*' id ='fephoto' name='fephoto')
+                  label(for='fephoto') 
                 .field-websiteinformationbrideinfoform-avatar_base64
                   input#websiteinformationbrideinfoform-avatar_base64.form-control(type='hidden' name='WebsiteInformationBrideInfoForm[avatar_base64]')
                   .help-block
