--- a/views/event.pug
+++ b/views/event.pug
@@ -15,13 +15,12 @@ block content
                         a.nav-link.bg-gray-200(href=`/wedding/edit/${event.wedding}/storylove`) Chuy&#x1EC7;n T&igrave;nh Y&ecirc;u
                     li(style='color:white')=n++
     if(events)
-        form#events-form
             input(type='hidden' name='_csrf-biihappy' value='Bnut6XhAaAad9tgIprrNXYOqO9FYEOrwhrdd--ZvnE0rGOm_EQcrPqjD71Dj970Q6e5hhw100par-hizqSrXNw==')
             .eventsContainer.row.mt-6
                 each event in events
                     .row-event.col-sm-6.col-md-4.col-lg-3
                         .card.card-border.border-dark.shadow-lg.card-border-radius-none.mb-7
-                        form#events-form.form-event.user()
+                        form#events-form.form-event-user(data-event-id=`${event.id}`)
                             .card-body
                                 a.thumbnail.d-block.mb-3.choose-image-parent.position-relative(href='javascript:void(0)')
                                     .choose-image-overlay.d-flex.justify-content-center.align-items-center.position-absolute.top-0.start-0.w-100.h-100
@@ -54,7 +53,7 @@ block content
                                         input#event_map_url_index_1.form-control(type='text' name='map' value=`${event.map}` placeholder='Liên kết bản đồ')
                                         label.control-label(for='map') Li&ecirc;n k&#x1EBF;t b&#x1EA3;n &dstrok;&#x1ED3;
                                         .help-block
-                                button.btn.btn-danger.me-7(type='submit' style='margin-right:25px,height:55px')
+                                button.btn.btn-danger.me-7.btn--save(type='submit' data-event-id=`${event.id}` style='margin-right:25px,height:55px' )
                                     svg.bi.bi-save(xmlns='http://www.w3.org/2000/svg' width='16' height='16' fill='currentColor' viewbox='0 0 16 16')
                                         path(d='M2 1a1 1 0 0 0-1 1v12a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H9.5a1 1 0 0 0-1 1v7.293l2.646-2.647a.5.5 0 0 1 .708.708l-3.5 3.5a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L7.5 9.293V2a2 2 0 0 1 2-2H14a2 2 0 0 1 2 2v12a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h2.5a.5.5 0 0 1 0 1H2z')
                                     | &#x9;&#x9;L&#x1B0;u 
